--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,10 +3,22 @@
      <title>Le Blog de Solène</title>
   </head>
   <body>
-    <h1>Le Blog de Mme Solène</h1>
-    <h2>This is actually my blog..Wow</h2>
-    <p>Hi there!</p>
-    <p>It works! How amazing !</p>
-    <p>Everyone, please congratulate me !</p>
+    <div>
+        <h1><a href="">Le Blog de Mme Solène</a></h1>
+    </div>
+
+    <div>
+        <p>published: 24.11.2018, 15:48</p>
+        <h2><a href="">First post</a></h2>
+        <h3>This is actually my first post..Wow</h3>
+        <p>Special thanks to DjangoGirls team ;) Look at the sky, listen to birds and speak to flowers</p>
+    </div>
+
+    <div>
+        <p>published : 24.11.2018, 15:50</p>
+        <h2><a href="">Second post</a></h2>
+        <h3>Wow ! Here my second post</h3>
+        <p>Hi reader ! It works ! How amazing ! Please congratulate me :D</p>
+    </div>
   </body>
 </html>
