--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,31 @@
+{% load static %}
 <html>
   <head>
      <title>Le Blog de Solène</title>
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+     <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div>
+    <div class="page-header">
         <h1><a href="">Le Blog de Mme Solène</a></h1>
     </div>
 
-  {% for post in posts %}
-    <div>
-        <p>publié:{{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+    <div class="content container">
+    <div class="row">
+        <div class="col-md-8">
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                    <h1><a href="">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-  {% endfor %}
+</div>
   </body>
 </html>
