--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,13 @@
-{% load static %}
-<html>
-  <head>
-     <title>Le Blog de Solène</title>
-     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-     <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div class="page-header">
-        <h1><a href="">Le Blog de Mme Solène</a></h1>
-    </div>
+{% extends 'blog/base.html' %}
 
-    <div class="content container">
-    <div class="row">
-        <div class="col-md-8">
-            {% for post in posts %}
-                <div class="post">
-                    <div class="date">
-                        {{ post.published_date }}
-                    </div>
-                    <h1><a href="">{{ post.title }}</a></h1>
-                    <p>{{ post.text|linebreaksbr }}</p>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-  </body>
-</html>
+{% block content %}
+  {% for post in posts %}
+      <div class="post">
+          <div class="date">
+              {{ post.published_date }}
+          </div>
+          <h1><a href="">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+  {% endfor %}
+{% endblock %}
