--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="page-header">
-        <h1><a href="/">Le Blog de Mme Solène</a></h1>
+        <h1><a href="/">Les Abysses de Mme Solène</a></h1>
     </div>
     <div class="content container">
         <div class="row">
