--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,17 +7,20 @@
      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
      <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   </head>
-  <body>
-    <div class="page-header">
+    <body>
+      <div class="page-header">
+        {% if user.is_authenticated %}
+           <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
         <h1><a href="/">Le Monde de Mme Solène</a></h1>
-    </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-            </div>
-        </div>
-    </div>
-  </body>
+      </div>
+         <div class="content container">
+           <div class="row">
+             <div class="col-md-8">
+             {% block content %}
+             {% endblock %}
+             </div>
+          </div>
+       </div>
+    </body>
 </html>
